# dig-store

./: .gitignore  .wip-store-status  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md
.github/workflows/: ci.yml  ensure-version-increment.yml  lockfile-check.yml  publish.yml  release.yml
scripts/: check-lockfile-version.py
src/: capsule.rs  chain.rs  error.rs  lib.rs  lifecycle.rs  size.rs  store.rs  types.rs  urn.rs
tests/: child_lineage_proof.rs  on_chain_getters.rs
tests/fixtures/: golden_capsule_module.hex
